// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover > matches snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-popover"
>
  <div
    class="inline-block w-full"
  >
    
    <div>
      <!-- @slot Trigger content. -->
      
      
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`Popover > matches snapshot with no props assigned 1`] = `
"<div class="inline-block" data-id="sds-popover">
  <div class="inline-block w-full">
    <div>
      <!-- @slot Trigger content. -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Popover > matches snapshot with prop assigned 1`] = `
"<div class="inline-block" data-id="sds-popover" popoverclass="test" triggerclass="test">
  <div class="inline-block w-full">
    <div>
      <!-- @slot Trigger content. -->
    </div>
  </div>
  <!--v-if-->
</div>"
`;
